--- a/index.html
+++ b/index.html
@@ -1,1 +1,175 @@
-test
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Corvi begeleiding en advies.</title>
+<style>
+  body {background-color: white;
+    font-family: Arial, sans-serif;
+  }
+  header {
+    text-align: center;
+    font-size: 2em;
+    margin: 20px 0;
+  }
+  .separator {
+    height: 5px;
+    background-color: #000;
+    margin: 20px 0;
+  }
+  .title {
+    text-align: center;
+    font-size: 1.5em;
+    margin: 20px 0;
+  }
+  .content {
+    display: flex;
+    justify-content: space-around;
+    margin: 20px;
+  }
+  .content div {
+    text-align: center;
+  }
+  .content img {
+    width: 150px; /* Placeholder size */
+    height: 210px; /* Placeholder size */
+    background-color: #ccc;
+    display: block;
+    margin: 0 auto 10px;
+  }
+  
+
+</style>
+</head>
+<body>
+
+  <div class="fixed-menu">
+    <a href="game.html">TAV clicker</a>
+    <a href="Galerij.html">contact</a>
+    <a href="Mop.html">6 moppen</a>
+    <a href="Music.html">TAV radio</a>
+    <a href="Planes.html">TAV flights</a>
+    <a href="Quiz.html">De TAV quiz!</a>
+</div>
+
+<style>
+    .fixed-menu {
+        position: fixed;
+        top: 0;
+        width: 100%;
+        background-color: #333;
+        padding: 10px;
+        text-align: center;
+    }
+    .fixed-menu a {
+        color: white;
+        text-decoration: none;
+        margin: 0 15px;
+    }
+    .fixed-menu a:hover {
+        color: lightblue;
+    }
+</style>
+
+  
+  <div class="separator"></div>
+   
+<div class="separator"></div>
+
+<div> Welkom op de website van TAV Books.
+Hier vind je allemaal informatie over TAV Books, hier zijn een paar voorbeelden:
+nieuwste boeken, kleine verhaaltjes, een game en nog veel meer. 
+
+    We hopen dat je de website leuk vind!
+</div>
+<div class="separator"></div>
+<div class="title">Nieuwe boeken en strips van TAVBooks</div>
+
+<div class="content">
+  <div>
+    <a href="TristanPage.html">
+    <img src="TristanCover.jpg" alt="Tristan">
+    <p>Het verhaal van Tristan</p>
+    </a>
+  </div>
+  <div>
+    <a href="GrahamPage.html">
+    <img src="TreinVanGrahamCover.jpg" alt="De trein van Graham">
+    <p>De trein van Graham</p>
+      </a>
+  </div>
+  <div>
+    <a href="MiseriePage.html">
+    <img src="MeneerMiserieCover.jpg" alt="Meneer MISERIE!!!">
+    <p>Meneer MISERIE!!! 4</p>
+    </a>
+  </div>
+</div>
+<div class="separator"></div>
+  <a href="T,A,VPage">
+  <header>TAV=Thomas,Alexander,Victor</header>
+  </a>
+  <div class="separator"></div>
+   <a href="spreekbeurtTAVCARS.html">
+  <header>geef een presentatie over TAV CARS!</header>
+  </a>
+  <div class="separator"></div>
+ <header>Wat is TAV nu eigenlijk?</header>
+  <div class="separator"></div>
+<div> TAV is gestart in het derde leerjaar.Toen schreef Alexander al boekjes, later begonnen Thomas en Victor mee te doen.Eerst focusten Thomas en Victor vooral op 
+  strips maken, maar later schreven ze ook volop boeken. En zo is TAV verder gevolueerd tot nu. </div>
+    <div class="separator"></div>
+  <header>Wie werkt er in TAV?</header>
+  <div class="separator"></div>
+  <div> In TAV werken er: Thomas, AlexanderG, Victor, AlexanderK, Aditya, Leo, Jindo, Olivia, Norah, Emma, Kristina, Danil, AlexanderS, Leni, Lander, Mink Khue, Louise en George.</div>
+  <div class="separator"></div>
+  <header>Welke merken heeft TAV?</header>
+  <div class="separator"></div>
+  <div> Welke merken heeft TAV? De merken van TAV zijn: TAVbooks, TAVsystems, TAVcars, TAVradio, TAVutilities, TAVturn, TAVseas, TAVmovie, TAVaccesoires, TAVbouw, TAVcode en TAVflights. </div>
+  <div class="separator"></div>
+   <header>TAV MOVIE</header>
+   <div class="separator"></div>
+  <div> TAV MOVIE is ook een merk van TAV en het maakt films. Hier is zo een korte film.</div>
+  <iframe width="560" height="315" src="https://www.youtube.com/embed/X6uDusiM5UU?si=KCtevPkX2e8SoGT-" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+   <div class="separator"></div>
+   <header>TAV CARS</header>
+    <div class="separator"></div>
+  <div> TAV CARS is een klein automerk dat auto's die op lucht rijden maakt. Momenteel werken we vooral aan de TAV CARS RK 01 een auto met drie wielen. </div>
+  <div class="separator"></div>
+  <header>TAV borrel</header>
+    <div class="separator"></div>
+  <div> Op 29 maart 2024 was er een TAV feest in Victor's huis. Hier is een foto van het feest </div>
+    <div class="separator"></div>
+   <img src="TAVBorrelFoto.jpg" >
+    <div class="separator"></div>
+    <header>TAV code</header>
+  <div class="separator"></div>
+  <div>TAV code heeft deze website gemaakt.</div>
+  <div class="separator"></div>
+   <a href="game.html">
+   <p>TAV clicker</p>
+   </a>
+  <a href="Mop.html">
+   <p>6 moppen!</p>
+   </a>
+  <a href="Galerij.html">
+   <p>Contact</p>
+   </a>
+  <a href="Music.html">
+   <p>TAV radio</p>
+   </a>
+  </a>
+  <a href="Planes.html">
+   <p>TAV flights</p>
+   </a>
+  <a href="Reclame.html">
+   <p>TAV reclame</p>
+   </a>
+   <div class="separator"></div>
+<div> 2024-2025 TAV BRANDS Copyright </div>
+  
+</body>
+</html>
+
