--- a/index.html
+++ b/index.html
@@ -46,17 +46,13 @@
 <body>
 
   <div class="fixed-menu">
-    <a href="game.html">TAV clicker</a>
-    <a href="Galerij.html">contact</a>
-    <a href="Mop.html">6 moppen</a>
-    <a href="Music.html">TAV radio</a>
-    <a href="Planes.html">TAV flights</a>
-    <a href="Quiz.html">De TAV quiz!</a>
+    <a href="index.html">CORVI</a>
 </div>
 
 <style>
     .fixed-menu {
         border-style: outset;
+        border-color: black;
         position: fixed;
         top: 0;
         width: 100%;
@@ -65,7 +61,7 @@
         text-align: center;
     }
     .fixed-menu a {
-        color: white;
+        color: rgb(0, 102, 204);
         text-decoration: none;
         margin: 0 15px;
     }
