--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         margin: 0 15px;
     }
     .fixed-menu a:hover {
-        color: lightblue;
+        color: rgb(0, 51, 204);
     }
 </style>
 
