--- a/index.html
+++ b/index.html
@@ -56,9 +56,9 @@
         position: fixed;
         top: 0;
         width: 100%;
-        background-color: #333;
+        background-color: white;
         padding: 10px;
-        text-align: center;
+        text-align: left;
     }
     .fixed-menu a {
         color: rgb(0, 102, 204);
