--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Corvi begeleiding en advies.</title>
 <style>
-  body {background-color: white;
+  body {background-color: rgb(204, 255, 255);
     font-family: Arial, sans-serif;
   }
   header {
