--- a/index.html
+++ b/index.html
@@ -39,18 +39,7 @@
     display: block;
     margin: 0 auto 10px;
   }
-  
-
-</style>
-</head>
-<body>
-
-  <div class="fixed-menu">
-    <a href="index.html">CORVI</a>
-</div>
-
-<style>
-    .fixed-menu {
+  .fixed-menu {
         border-style: outset;
         border-color: black;
         position: fixed;
@@ -68,11 +57,20 @@
     .fixed-menu a:hover {
         color: rgb(0, 51, 204);
     }
+  
+
 </style>
+</head>
+<body>
+
+  <div class="fixed-menu">
+    <a href="index.html">CORVI</a>
+</div>
+
 
   
   <div class="separator"></div>
-  
+  <img src="pic_trulli.jpg" alt="Oeps er loopt iets fout!☹" width="500" height="333">
    
 <div class="separator"></div>
 
