--- a/index.html
+++ b/index.html
@@ -57,7 +57,11 @@
     .fixed-menu a:hover {
         color: rgb(0, 51, 204);
     }
-  
+  .frontfoto {
+        top: 0;
+        width: 100%;
+        padding: 10px;
+  }
 
 </style>
 </head>
@@ -70,7 +74,7 @@
 
   
   <div class="separator"></div>
-  <img src="pic_trulli.jpg" alt="Oeps er loopt iets fout!☹" width="500" height="333">
+  <img class="frontfoto" src="CORVI.png" alt="Oeps er loopt iets fout!☹" width="500" height="333">
    
 <div class="separator"></div>
 
