--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         color: rgb(0, 51, 204);
     }
   .frontfoto {
-        top: 0;
+        top: 100%;
         width: 100%;
         padding: 10px;
   }
