--- a/index.html
+++ b/index.html
@@ -57,11 +57,7 @@
     .fixed-menu a:hover {
         color: rgb(0, 51, 204);
     }
-  .frontfoto {
-        top: 100%;
-        width: 100%;
-        padding: 10px;
-  }
+  
 
 </style>
 </head>
@@ -75,7 +71,25 @@
   
   <div class="separator"></div>
   
-  <img class="frontfoto" src="CORVI.png" alt="Oeps er loopt iets fout!☹" width="500" height="333">
+  <div class="hero">
+    <h1>Welkom</h1>
+    <p>Een mooie achtergrond voor deze sectie!</p>
+</div>
+
+<style>
+    .hero {
+        background-image: url('https://source.unsplash.com/1600x900/?city');
+        background-size: cover;
+        background-position: center;
+        height: 400px; /* Zorgt ervoor dat de sectie een hoogte heeft */
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        color: white;
+        text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+    }
+</style>
+
    
 <div class="separator"></div>
 
