--- a/index.html
+++ b/index.html
@@ -57,6 +57,16 @@
     .fixed-menu a:hover {
         color: rgb(0, 51, 204);
     }
+  .hero {
+        background-image:"CORVI.png;
+        background-size: cover;
+        background-position: center;
+        height: 400px; /* Zorgt ervoor dat de sectie een hoogte heeft */
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        color: DodgerBlue;
+    }
   
 
 </style>
@@ -76,19 +86,6 @@
     <p>Een mooie achtergrond voor deze sectie!</p>
 </div>
 
-<style>
-    .hero {
-        background-image: url('https://source.unsplash.com/1600x900/?city');
-        background-size: cover;
-        background-position: center;
-        height: 400px; /* Zorgt ervoor dat de sectie een hoogte heeft */
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        color: white;
-        text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
-    }
-</style>
 
    
 <div class="separator"></div>
