--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         color: rgb(0, 51, 204);
     }
   .hero {
-        background-image:"CORVI.png;
+        background-image:"CORVI.png";
         background-size: cover;
         background-position: center;
         height: 400px; /* Zorgt ervoor dat de sectie een hoogte heeft */
@@ -82,7 +82,7 @@
   <div class="separator"></div>
   
   <div class="hero">
-    <h1>Welkom</h1>
+    <h1>Welkom klant</h1>
     <p>Een mooie achtergrond voor deze sectie!</p>
 </div>
 
