--- a/index.html
+++ b/index.html
@@ -74,12 +74,12 @@
     <a href="index.html">CORVI</a>
 </div>
 
-
-  
   <div class="separator"></div>  
 <div class="separator"></div>
 <header class="naam">CORVI</header>
   <div class="separator"></div>
+  <div>Corvi is een bedrijf dat advies en projectbegeleiding doet over kijkcijfers. Krijg advies en projectbegeleiding van een echte expert namelijk Dominique Vancraeynest.</div>
+  <img src="" alt="Oeps! er loopt iets fout! ☹">
 </body>
 </html>
 
