--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 <header class="naam">CORVI</header>
   <div class="separator"></div>
   <div>Corvi is een bedrijf dat advies en projectbegeleiding doet over kijkcijfers. Krijg advies en projectbegeleiding van een echte expert namelijk Dominique Vancraeynest.</div>
-  <img src="" alt="Oeps! er loopt iets fout! ☹">
+  <img src="myfoto.jfif" alt="Oeps! er loopt iets fout! ☹">
 </body>
 </html>
 
