--- a/index.html
+++ b/index.html
@@ -66,6 +66,17 @@
     margin: 20px 0; 
     color: rgb(0, 102, 204); 
    }
+  .info {
+  border-color: #2196F3;
+  color: dodgerblue;
+  align-items: center;  
+}
+
+.info:hover {
+  background: #2196F3;
+  color: white;
+}
+
 </style>
 </head>
 <body>
@@ -79,7 +90,9 @@
 <header class="naam">CORVI</header>
   <div class="separator"></div>
   <div>Corvi is een bedrijf dat advies en projectbegeleiding doet over kijkcijfers. Krijg advies en projectbegeleiding van een echte expert namelijk Dominique Vancraeynest.</div>
+  <div>---------------------------------------------------------------</div>
   <img src="myfoto.jfif" alt="Oeps! er loopt iets fout! ☹">
+  <button class="btn info">Info</button>
 </body>
 </html>
 
