--- a/index.html
+++ b/index.html
@@ -92,7 +92,8 @@
   <div>Corvi is een bedrijf dat advies en projectbegeleiding doet over kijkcijfers. Krijg advies en projectbegeleiding van een echte expert namelijk Dominique Vancraeynest.</div>
   <div>---------------------------------------------------------------</div>
   <img src="myfoto.jfif" alt="Oeps! er loopt iets fout! ☹">
-  <button class="btn info">Info</button>
+  <div class="separator"></div>
+  <button class="btn info">Begin vandaag nog!</button>
 </body>
 </html>
 
