--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
   <div>---------------------------------------------------------------</div>
   <img src="myfoto.jfif" alt="Oeps! er loopt iets fout! ☹">
   <div class="separator"></div>
-  <button class="btn info">Begin vandaag nog!</button>
+  <button class="btn info" href="nudoen.html >Begin vandaag nog!</button>
 </body>
 </html>
 
