--- a/index.html
+++ b/index.html
@@ -93,7 +93,10 @@
   <div>---------------------------------------------------------------</div>
   <img src="myfoto.jfif" alt="Oeps! er loopt iets fout! ☹">
   <div class="separator"></div>
-  <button class="btn info" href="nudoen.html" >Begin vandaag nog!</button>
+ /* <button class="btn info" href="nudoen.html" >Begin vandaag nog!</button> */
+  <form action="nudoen.html" method="get">
+    <input type="submit" value="Begin vandaag nog" class="btn info"/>
+</form>
 </body>
 </html>
 
