--- a/nudoen.html
+++ b/nudoen.html
@@ -92,7 +92,7 @@
   <div class="separator"></div>
   <div>Hier vind je de link naar mijn Email. Schrijf in de mail de volgende dingen: Email adres, Wanneer moet ik komen?, Hoe noem je?, Wanneer moet ik komen?, Waar moet ik komen? en Waarom moet ik komen?</div>
 
- <button class="btn info" onclick="window.location.href='mailto:vancraeynest.dominique@telenet.be';">
+ <button onclick="window.location.href='mailto:vancraeynest.dominique@telenet.be';">
     Stuur mail
 </button>
   
