--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 <body>
 
   <div class="fixed-menu">
-    <a href="index.html">CORVI</a>
+    <a href="https://franknaets.github.io/Corvi/">CORVI</a>
 </div>
 
   <div class="separator"></div>  
